# price-forecast-eval

./: README.md  pyproject.toml
docs/: spec.md
price_forecast_eval/: __init__.py  adapters.py  cli.py  composite.py  evaluate.py  io.py  point_metrics.py  scenario_tags.py  segment_metrics.py  shape_metrics.py  validation.py
price_forecast_eval/viz/: __init__.py  plotting.py  standard.py
tests/: test_metrics.py  test_viz.py
